Fix: minor errors in spelling and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ h4 {
     text-transform: uppercase;
 }
 
-.genral-sub {
+.general-sub {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
